--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    //koin
+    implementation 'io.insert-koin:koin-core:3.4.0'
+    implementation 'io.insert-koin:koin-android:3.4.0'
+
+    testImplementation 'io.insert-koin:koin-test:3.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
