--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
+
