--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':presentation_core')
     implementation project(path: ':domain')
     implementation project(path: ':data')
     implementation 'androidx.core:core-ktx:1.10.0'
