--- a/presentation_core/build.gradle
+++ b/presentation_core/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlinx-serialization'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.semdelion.data'
+    namespace 'com.semdelion.presentation.core'
     compileSdk 33
 
     defaultConfig {
@@ -15,6 +14,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+    }
+
+    dataBinding {
+        enabled = true
     }
 
     buildTypes {
@@ -35,13 +38,20 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
-
-    implementation project(path: ':domain')
+//    implementation 'androidx.appcompat:appcompat:1.6.1'
+//    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    kapt 'com.android.databinding:compiler:3.1.4'
+   // implementation 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+kapt {
+    generateStubs = true
+}
+
