--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "PetMvvm"
+rootProject.name = "CleanArchitecture"
 include ':app'
 include ':data'
 include ':domain'
