--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
