--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,15 +35,15 @@ android {
 dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
-    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+   // implementation 'androidx.room:room-ktx:2.5.1'
+    //kapt 'androidx.room:room-compiler:2.5.1'
+    //implementation 'androidx.room:room-runtime:2.5.1'
+    //annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     implementation project(path: ':domain')
     testImplementation 'junit:junit:4.13.2'
