--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,10 +40,11 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
-    // implementation 'androidx.room:room-ktx:2.5.1'
-    //kapt 'androidx.room:room-compiler:2.5.1'
-    //implementation 'androidx.room:room-runtime:2.5.1'
-    //annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+
+    implementation 'androidx.room:room-ktx:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation 'androidx.room:room-runtime:2.5.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     implementation project(path: ':domain')
     testImplementation 'junit:junit:4.13.2'
