--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    //TODO убрать инициализацию room в data
+    kapt {
+        arguments {
+            arg("room.schemaLocation","$projectDir/schemas")
+        }
+    }
 }
 
 dependencies {
-    var nav_version = "2.6.0"
-
     implementation project(path: ':domain')
     implementation project(path: ':data')
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -50,24 +55,28 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-//TODO убрать инициализацию room в data
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
 
-    //Lottie
-    implementation 'com.airbnb.android:lottie:3.4.0'
+    //TODO убрать инициализацию room в data
+    def room_version= "2.5.1"  //room
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
 
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    kapt 'com.github.bumptech.glide:compiler:4.15.1'
+    def lifecycle_version= "2.6.1"  //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
-    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
-    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    def lottie_version= "3.4.0"  //lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
+    def glide_version= "4.15.1"  //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    def nav_version = "2.6.0" //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
@@ -78,5 +87,5 @@ dependencies {
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 }
