--- a/data/build.gradle
+++ b/data/build.gradle
@@ -30,6 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kapt {
+        arguments {
+            arg("room.schemaLocation","$projectDir/schemas")
+        }
+    }
 }
 
 dependencies {
@@ -41,9 +46,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
 
-    implementation 'androidx.room:room-ktx:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
+    def room_version= "2.5.1"  //room
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     implementation project(path: ':domain')
